# criteo-uplift-modeling

./: .gitignore  00_eda.ipynb  01_meta_learners.ipynb  02_tree_methods.ipynb  03_dml.ipynb  04_advanced.ipynb  05_hpo.ipynb  06_benchmark.ipynb  07_conformal.ipynb  METRICS.md  README.md  RESEARCH.md  criteo_data.py  pyproject.toml
